  * Added support for 'register' option in @dub.
  * Added support for custom destructor: 'destructor' option in @dub.
  * Added 'namespace' option (support for namespace constants and functions.
  * Added :deleted() on all class bindings to detect C++ deleted objects from Lua.
  * Optimized 'dub_issdata' when the only type resolution involves userdata.

* Minor enhancement
  * Should not add namespace to typedef of template in namespace.
  * Should check doxygen header versions.
  * Should create cast for unresolved templated parents.
  * Added 'ignore' setting for parser.
  * Ignoring 'struct' keyword in param (C++ name scoping rules apply).
  * Casting enum types to 'int' instead of double.
  * Added 'extra_headers' option to binder.
  * Fixed bug with unamed method parameters (Tim Mensch).
  * Fixed bug with void parameter (Tim Mensch).
  * Fixed bug where lua stack would grow during class registration (Tim Mensch).
  * Added 'attr_name_filter' to rename attributes.
  * Removed 'yaml' dependency and changed @dub options format.
  * Binding all classes now works inside a namespace.
  * Added support for custom bindings with default values.
  * Added @dub bind: false option to not create bindings.
  * Added @dub destructor: false option to not destroy from lua.
  * @dub ignore can be used to ignore attributes.
  * Warn on nested namespaces instead of crash.
  * Better handling of unknown (opaque) types.
  * Added tests for custom global function bindings.
  * Should list super classes in C++ visibility order (from child to parent).
  * Class.type should reflect class name, not registration name.
  * Should not create 'cast' method when superclasses have 'cast: false'.
  * Allow multiple 'header_base' paths to remove (removes the first one matching).
  * Make sure abstract types are detected even if all pure virtual functions are ignored.
  * Support for warn levels (5 = all, 4 = less, ..., 1 = errors).